--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,10 @@
-<p>Yes</p>
+<div class="container">
+<%= render 'main_nav' %>
+<% if current_user %>
+  Logged in as <%= current_user.email %>.
+  <%= link_to 'Log Out', logout_path %>
+<% else %>
+  <%= link_to 'Sign Up', signup_path %> or 
+  <%= link_to 'Log In', login_path %>
+<% end %><p id=”notice”><%= notice %></p>
+</div> <!-- end container --->
