--- a/app/views/application/_main_nav.html.erb
+++ b/app/views/application/_main_nav.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar" role="navigation" aria-label="main navigation">
 	  <div class="navbar-brand">
 		<a class="navbar-item" href="https://bulma.io">
-		<%= image_tag(asset_path 'solidus_logo.png', width: 112, height: 28)%>
+		<%= image_tag(asset_path 'solidus_logo.png', height: 28)%>
 		</a>
 	
 		<a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
