--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>/._</title>
+    <%= javascript_include_tag "application" %>
+    <%= javascript_include_tag 'cable' %>
+    
+    <title>／.＿</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= action_cable_meta_tag %>
     
   </head>
 
