--- a/app/views/application/_main_nav.html.erb
+++ b/app/views/application/_main_nav.html.erb
@@ -47,12 +47,8 @@
 		<div class="navbar-end">
 		  <div class="navbar-item">
 			<div class="buttons">
-			  <a class="button is-primary">
-				<strong>Sign up</strong>
-			  </a>
-			  <a class="button is-light">
-				Log in
-			  </a>
+			  <%= link_to "Sign up", new_user_registration_path, class: "button is-primary"%>
+			  <%= link_to "Log in", new_user_session_path, class: "button is-light" %>
 			</div>
 		  </div>
 		</div>
