Nudge heroku that these changed

--- a/app/views/application/_main_nav.html.erb
+++ b/app/views/application/_main_nav.html.erb
@@ -17,6 +17,7 @@
 			Home
 		  </a>
 	
+	<!-- Not needed
 		  <a class="navbar-item">
 			Documentation
 		  </a>
@@ -41,8 +42,12 @@
 				Report an issue
 			  </a>
 			</div>
-		  </div>
 		</div>
+			
+			End Not needed -->
+		</div>
+		
+		
 	
 		<div class="navbar-end">
 		  <div class="navbar-item">
