--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <%= javascript_include_tag "application" %>
+    <%= javascript_include_tag 'application' %>
     
     
     <title>／.＿</title>
