--- a/app/views/welcome/landing.html.erb
+++ b/app/views/welcome/landing.html.erb
@@ -39,7 +39,7 @@
   <span class="tag is-success" id="clientsTag"><%= ActionCable.server.connections.length %></span>
 </div>
 
-<canvas id="c" style="width: 100%"></canvas>
+<canvas id="c"></canvas>
 
 </div> <!-- End Container -->
 
