--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,50 +1,46 @@
+<body style="background-color: #22262d">
 
 <div class="container">
-<%= render 'main_nav' %>
+<br  />
+<br  />
+<nav class="navbar is-dark"
+    role="navigation"
+    aria-label="main navigation"
+    style="border-radius: 30px; background-color: #101113;">
+  <div class="navbar-brand">
+  <a class="navbar-item" href="https://solidus.space">
+  <%= image_tag(asset_path 'solidus_logo.png', height: 28)%>
+  </a>
 
-<div class="columns">
-  <div class="column is-four-fifths is-desktop">
-<div class="field is-grouped is-grouped-multiline">
-  <div class="control">
-    <div class="tags has-addons">
-      <span class="tag is-dark">x</span>
-      <span class="tag is-danger" id="mouseX">000</span>
-    </div>
+  <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+    <span aria-hidden="true"></span>
+    <span aria-hidden="true"></span>
+    <span aria-hidden="true"></span>
+  </a>
   </div>
 
-  <div class="control">
-    <div class="tags has-addons">
-      <span class="tag is-dark">y</span>
-      <span class="tag is-success" id="mouseY">000</span>
-    </div>
-  </div>
+  <div id="navbarBasicExample" class="navbar-menu">
+    <div class="navbar-start">
+      <a class="navbar-item">Home</a>
   
-  <div class="control">
-    <div class="tags has-addons">
-      <span class="tag is-dark">clients</span>
-      <span class="tag is-success" id="clientsTag"><%= ActionCable.server.connections.length %></span>
+    <div class="navbar-item">
+    <div class="buttons">
+      <%= link_to "Sign up", new_user_registration_path, class: "button is-primary is-rounded"%>
+      <%= link_to "Log in", new_user_session_path, class: "button is-light is-rounded" %>
+    </div>
     </div>
   </div>
+</nav>
+<br  />
+<br  /> <!-- End Nav -->
+
+<div class="tags has-addons">
+  <span class="tag is-dark">clients</span>
+  <span class="tag is-success" id="clientsTag"><%= ActionCable.server.connections.length %></span>
 </div>
 
-<canvas class="box" id="c">
-  
-</canvas>
+</div> <!-- End Container -->
 
-<form>
-  <label>Say something:</label><br>
-  <input type="text" data-behavior="room_speaker">
-</form>
+<canvas id="c" width="70%"></canvas>
 
-  </div><!-- End Column -->
-
-  <div class="colum is-desktop">
-    <div id="messages">
-      <h1 class="subtitle">Websocket Messages</h1>
-      <%= render @messages %>
-    </div>
-  </div>
-
-</div> <!-- End Columns -->
-
-</div> <!-- end container --->
+</body>
