Bit of a hack and rejiggle of Threejs

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -40,7 +40,7 @@
 </div>
 
 </div> <!-- End Container -->
-
-<canvas id="c" width="70%"></canvas>
-
+<div class="container">
+<canvas id="c" style="width: 100%"></canvas>
+</div>
 </body>
