--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,12 +4,14 @@
     <%= javascript_include_tag 'application' %>
     
     
-    <title>／.＿</title>
+    <title>／.＿ Solidus Space</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= action_cable_meta_tag %>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta charset="utf-8">
     
   </head>
 
