--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,4 +15,18 @@
  */
 
 
+.colour-pink-dark { background-color: #F81C8C; }
+.colour-pink-light { background-color: #FB22FA; }
+.colour-purple-dark { background-color: #D074FF; }
+.colour-purple-light { background-color: #FECFFF; }
+.colour-blue-dark { background-color: #5AFEFF; }
+.colour-blue-light { background-color: #CAFFFF; }
+.colour-green-dark { background-color: #40FD87; }
+.colour-yellow { background-color: #FFFE6F; }
+.colour-orange-light { background-color: #FDC600; }
+.colour-orange-dark { background-color: #FA8C00; }
+.colour-bg-dark { background-color: #1A1D22; }
+.colour-bg-medium { background-color: #272B31; }
+.colour-bg-light { background-color: #747679; }
+
 @import 'bulma/bulma';
