--- a/app/views/application/_main_nav.html.erb
+++ b/app/views/application/_main_nav.html.erb
@@ -1,9 +1,9 @@
 <br  />
 <br  />
-<nav class="navbar is-dark"
+<nav class="navbar is-dark colour-bg-dark"
 	role="navigation"
 	aria-label="main navigation"
-	style="border-radius: 30px; background-color: #101113;">
+	style="border-radius: 30px;">
   <div class="navbar-brand">
   <a class="navbar-item" href="https://solidus.space">
   <%= image_tag(asset_path 'solidus_logo.png', height: 28)%>
@@ -22,7 +22,7 @@
   
 	<div class="navbar-item">
 	<div class="buttons">
-	  <%= link_to "Sign up", new_user_registration_path, class: "button is-primary is-rounded"%>
+	  <%= link_to "Sign up", new_user_registration_path, class: "button is-primary colour-green-dark is-rounded"%>
 	  <%= link_to "Log in", new_user_session_path, class: "button is-light is-rounded" %>
 	</div>
 	</div>
