--- a/app/views/application/_main_nav.html.erb
+++ b/app/views/application/_main_nav.html.erb
@@ -1,9 +1,9 @@
 <br  />
 <br  />
-<nav class="navbar is-dark colour-bg-dark"
+<nav class="navbar is-dark"
 	role="navigation"
 	aria-label="main navigation"
-	style="border-radius: 30px;">
+	style="border-radius: 30px; background-color: #000000;">
   <div class="navbar-brand">
   <a class="navbar-item" href="https://solidus.space">
   <%= image_tag(asset_path 'solidus_logo.png', height: 28)%>
@@ -28,5 +28,4 @@
 	</div>
   </div>
 </nav>
-<br  />
 <br  /> <!-- End Nav -->
