Added Figma Demo

--- a/app/views/application/_main_nav.html.erb
+++ b/app/views/application/_main_nav.html.erb
@@ -19,6 +19,7 @@
   <div id="navbarBasicExample" class="navbar-menu">
 	<div class="navbar-start">
 	  <a href="/" class="navbar-item">Home</a>
+	  <a href="/demo" class="navbar-item">Demo</a>
   
 	<div class="navbar-item">
 	<div class="buttons">
