Renamed some things to get Backbone to work again in Prod. Please!

--- a/app/views/application/_main_nav.html.erb
+++ b/app/views/application/_main_nav.html.erb
@@ -20,6 +20,7 @@
 	<div class="navbar-start">
 	  <a href="/" class="navbar-item">Home</a>
 	  <a href="/demo" class="navbar-item">Demo</a>
+	  <a href="/backbone" class="navbar-item">Backbone</a>
   
 	<div class="navbar-item">
 	<div class="buttons">
