--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -93,5 +93,7 @@
 </div> <!-- End Container -->
   </div>
 </section> <!-- End Section -->
+<canvas id="cube" class="is-hidden">
+  </canvas>
 
 </body>
