--- a/app/views/backbone/index.html.erb
+++ b/app/views/backbone/index.html.erb
@@ -3,7 +3,7 @@
 <%= render 'main_nav' %>
 
 <div class="columns">
-  <div class="column is-four-fifths is-desktop">
+  <div class="column">
 <div class="field is-grouped is-grouped-multiline">
   <div class="control">
     <div class="tags has-addons">
@@ -27,9 +27,11 @@
   </div>
 </div>
 
-<canvas class="box" id="cube">
-  
+
+<div class="box">
+<canvas id="cube" style="width: 100%">
 </canvas>
+</div>
 
 <form>
   <label>Say something:</label><br>
@@ -38,12 +40,16 @@
 
   </div><!-- End Column -->
 
-  <div class="colum is-desktop">
+  <div class="colum is-one-fifth">
     <div id="messages">
       <h1 class="subtitle">Websocket Messages</h1>
       <%= render @messages %>
     </div>
   </div>
+  
+<!-- Hidden canvases to avoid the wrath of JS--->
+<canvas class="is-hidden" id="c"></canvas>
+<div class="is-hidden" id="chart-container"></div>
 
 </div> <!-- End Columns -->
 
